# DALIL_DILER_GACON_ML_5A

Atlus/: CMakeLists.txt
Atlus/headers/: MLPData.h  core.h  utils.h
Atlus/src/: CMakeLists.txt  core.cpp  main.cpp  parser.cpp  tests.cpp  utils.cpp
Atlus/src/headers/: MLPData.h  core.h  parser.h  utils.h
Atlus/tests/: CMakeLists.txt  framework.cpp  tests.cpp
Atlus/tests/cases/: handler.cpp  tests.cpp  utils.cpp
Atlus/tests/headers/: framework.h  utils.h
